--- a/Lime.vcxproj
+++ b/Lime.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="LuaLime.cpp" />
     <ClCompile Include="Material.cpp" />
+    <ClCompile Include="MeshBuffer.cpp" />
     <ClCompile Include="NetworkHandler.cpp" />
     <ClCompile Include="os.cpp" />
     <ClCompile Include="Packet.cpp" />
@@ -209,6 +210,7 @@
     <ClInclude Include="Line.h" />
     <ClInclude Include="LuaLime.h" />
     <ClInclude Include="Material.h" />
+    <ClInclude Include="MeshBuffer.h" />
     <ClInclude Include="NetworkHandler.h" />
     <ClInclude Include="os.h" />
     <ClInclude Include="Packet.h" />
